[project]
name = "superv-aider"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Shroominic", email = "contact@shroominic.com" }]
dependencies = [
    "aider-chat>=0.40.6",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
